--- a/index.html
+++ b/index.html
@@ -1,27 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Dashboard</title>
   </head>
   <body>
-    <h1>Weather Dashboard</h1>
-    <input
-      type="text"
-      name="city"
-      id="city"
-      placeholder="Please write a city name..."
-    />
-    <button class="city-search">Go</button>
-    <img src="" alt="" class="city-image" />
-    <img src="" alt="" class="weather-icon" />
-    <h1 class="degrees"></h1>
-    <h2 class="condition"></h2>
-    <h3 class="wind"></h3>
-    <h3 class="humidity"></h3>
-    <h3 class="clouds"></h3>
+    <div class="container">
+      <!-- Header / title -->
+      <h1>Weather Dashboard</h1>
+
+      <!-- Search bar -->
+      <div class="search-container">
+        <input type="text" name="city" id="city" placeholder="Enter city..." />
+        <button class="city-search">Go</button>
+      </div>
+
+      <!-- Weather results -->
+      <div class="results-container">
+        <h1 class="degrees"></h1>
+        <h2 class="condition"></h2>
+        <p class="date">Sunday,5 Oct</p>
+        <img src="" alt="" class="weather-icon" />
+
+        <!-- Bottom stats -->
+        <div class="stats">
+          <h3 class="wind"></h3>
+          <h3 class="humidity"></h3>
+          <h3 class="clouds"></h3>
+        </div>
+        <img src="" alt="" class="city-image" />
+      </div>
+    </div>
+
     <script src="config.js"></script>
     <script src="script.js"></script>
   </body>
