added loading and error functionality

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
       <!-- Weather results -->
       <div class="results-container">
+        <div class="loading">Loading data...</div>
+        <div class="error"></div>
         <h1 class="degrees"></h1>
         <h2 class="condition"></h2>
         <p class="date">Sunday,5 Oct</p>
